Trying to fix nav menu on mobile (bottom was hidden by the browser menu)

--- a/src/top-level/App/App.module.css
+++ b/src/top-level/App/App.module.css
@@ -1,10 +1,11 @@
 .appContainer {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     isolation: isolate;
     /* min-width: 340px; */
+    width: 100%;
     max-width: 100vw;
     min-height: 100vh;
     background-color: black;
@@ -25,6 +26,7 @@
     justify-content: center;
     width: 100%;
     flex-grow: 1;
+    min-height: 0;
     align-items: stretch;
 }
 
