--- a/src/top-level/Footer/Footer.module.css
+++ b/src/top-level/Footer/Footer.module.css
@@ -9,7 +9,7 @@
     color: rgba(255, 255, 255, 0.75);
     width: 95%;
     max-width: 500px;
-    margin-top: 30px;
+    /* margin-top: 30px; */
     /* padding-top: 10px;
     padding-bottom: 20px; */
     /* border: 1px solid red; */
